--- a/html_css_task_3_jun/styles.css
+++ b/html_css_task_3_jun/styles.css
@@ -32,6 +32,10 @@ input::placeholder {
   color: black;
 }
 
+textarea{
+  overflow-y: scroll
+}
+
 textarea::placeholder {
   opacity: 1;
   color: black;
