--- a/task_5_Quantum/css/login.css
+++ b/task_5_Quantum/css/login.css
@@ -19,43 +19,38 @@ body {
   min-height: 100vh;
 }
 
-.main-login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 50px 0px;
-  flex: 1; /* This will make main-login take up remaining space */
-}
-
-.footer {
-  font-size: 12px;
-  display: flex;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
-  color: #616161;
-  background-color: #e0e1e1;
-  margin-top: auto; /* This pushes footer to bottom */
-}
-
 .header {
   width: 100%;
   background-image: url("../assets/header_pattern_svg.svg");
   border-bottom: 2px solid #3ac7ec;
   background-color: black;
-  mix-blend-mode: multiply;
+  position: relative;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+  pointer-events: none;
 }
 
 .header-logo {
   margin: 15px 0px 10px 20px;
+  position: relative;
+  z-index: 1;
 }
+
 .main-login {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 50px 0px;
+  flex: 1;
 }
-
 .login-box {
   width: 488px;
   height: 560px;
@@ -272,17 +267,6 @@ input[type="checkbox"]:checked {
   border-right: 1px solid #d1d1d1;
 }
 
-.footer {
-  margin-top: auto;
-  font-size: 12px;
-  display: flex;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
-  color: #616161;
-  background-color: #e0e1e1;
-}
-
 .foot-text {
   display: flex;
   align-items: center;
@@ -298,4 +282,15 @@ input[type="checkbox"]:checked {
 
 .footer-logo {
   margin-right: 10px;
+}
+
+.footer {
+  font-size: 12px;
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  color: #616161;
+  background-color: #e0e1e1;
+  margin-top: auto;
 }
