--- a/task_5_Quantum/css/teacher_dashbord.css
+++ b/task_5_Quantum/css/teacher_dashbord.css
@@ -99,12 +99,8 @@ body {
   border: none;
   cursor: pointer;
   padding: 8px;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
 
-.menu-icon button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 0.3s ease;
 }
 
 @media (max-width: 768px) {
@@ -372,13 +368,22 @@ body {
   flex: 1;
 }
 
+.add-grade {
+  color: #1f7a54;
+}
 .course-title {
   font-family: "Quicksand";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   color: #222222;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .sub-grade {
@@ -420,18 +425,18 @@ body {
   color: #222222;
 }
 
-.classs-info {
+.class-info {
   display: flex;
   gap: 6px;
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 14px;
   color: #666666;
 }
 
-.classs-info .sub-line {
+.class-info .sub-line {
   border-left: 1px solid #666666;
   opacity: 0.12;
   height: 12px;
@@ -458,14 +463,15 @@ body {
 }
 
 .course-class {
-  margin: 16px 16px 16px 0px;
+  margin-top: 16px;
 }
 
-.classs-info {
+.class-info {
   margin: 8px 0px;
 }
 .course-actions {
   display: flex;
+  margin-top: auto;
   justify-content: space-between;
 }
 
