--- a/task_5_Quantum/css/teacher_dashbord.css
+++ b/task_5_Quantum/css/teacher_dashbord.css
@@ -60,7 +60,7 @@ body {
   gap: 32px;
   transition: all 0.3s ease;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: 14px;
   letter-spacing: 0px;
@@ -70,7 +70,7 @@ body {
   color: #3fd28b;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 600;
   transition: color 0.3s ease;
   position: relative;
 }
@@ -242,7 +242,7 @@ body {
   height: 582px;
   position: absolute;
   overflow-y: scroll;
-  right: 101px;
+  right: 47px;
   top: 41px;
   box-shadow: 0px 3px 6px #00000029;
 }
@@ -345,7 +345,7 @@ body {
   padding: 2rem;
   font-size: 16px;
   line-height: 20px;
-  font-weight: 500;
+  font-weight: 600;
   font-style: normal;
   display: flex;
   justify-content: space-around;
@@ -407,6 +407,8 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 24px 24px 17px;
+  font-weight: 600;
+  color: #686868;
 }
 
 .courses-info {
@@ -415,6 +417,8 @@ body {
 }
 
 .sort-controls {
+  font-size: 12px;
+  line-height: 16px;
   display: flex;
   align-items: center;
   gap: 12px;
@@ -431,7 +435,7 @@ body {
   appearance: none;
   font-family: "Quicksand";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0px;
@@ -483,6 +487,8 @@ body {
 }
 
 .course-info {
+  font-size: 12px;
+  line-height: 14px;
   flex: 1;
 }
 
@@ -512,7 +518,7 @@ body {
   gap: 9px;
   font-family: "Quicksand";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 16px;
   color: #666666;
@@ -529,7 +535,7 @@ body {
   gap: 6px;
   font-family: "Quicksand";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 16px;
   color: #666666;
@@ -548,7 +554,7 @@ body {
   gap: 6px;
   font-family: "Quicksand";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 14px;
   color: #666666;
@@ -570,7 +576,7 @@ body {
   appearance: none;
   font-family: "Quicksand";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0px;
