--- a/task_5_Quantum/css/teacher_dashbord.css
+++ b/task_5_Quantum/css/teacher_dashbord.css
@@ -4,7 +4,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -17,23 +16,18 @@ body {
   height: 100vh;
 }
 
-/* .dashbord-container {
-  width: 100%;
-} */
-
 .nav-bar {
   width: 100%;
   background-image: url("../assets/header_pattern_svg.svg");
-  background-color: black;
+  background-color: #000000;
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0rem 1rem;
-  color: #fff;
+  color: #ffffff;
   min-height: 56px;
 }
-
 .nav-bar::before {
   content: "";
   position: absolute;
@@ -44,7 +38,6 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   pointer-events: none;
 }
-
 .nav-bar-logo {
   position: relative;
   z-index: 2;
@@ -65,7 +58,6 @@ body {
   line-height: 14px;
   letter-spacing: 0px;
 }
-
 .nav-links a {
   color: #3fd28b;
   text-decoration: none;
@@ -74,22 +66,12 @@ body {
   transition: color 0.3s ease;
   position: relative;
 }
+.nav-links .nav-item {
+  position: relative;
+}
 .nav-links .nav-item.active {
   color: #ffffff;
 }
-
-.nav-item {
-  position: relative;
-}
-
-.link-and-arrow .arrow {
-  display: none;
-}
-
-.sub-links {
-  display: none;
-}
-
 .nav-links .nav-item.active::after {
   content: "";
   position: absolute;
@@ -100,22 +82,29 @@ body {
   background-color: #ffffff;
 }
 
+.link-and-arrow .arrow {
+  display: none;
+}
+
+.sub-links {
+  display: none;
+}
+
 .menu-icon {
   display: none;
   position: relative;
   z-index: 3;
 }
-
-.white-icon {
-  filter: brightness(0) invert(1);
-}
-
 .menu-icon button {
   background: none;
   border: none;
   cursor: pointer;
   padding: 8px;
   transition: background-color 0.3s ease;
+}
+
+.white-icon {
+  filter: brightness(0) invert(1);
 }
 
 .content-of-dashbord {
@@ -138,32 +127,46 @@ body {
   line-height: 14px;
   letter-spacing: 0px;
 }
-
-.alerts-box .alert-white-ele {
-  background-color: #ffffff;
-}
-
 .notifications .alert-box-show {
   display: block;
 }
+.notifications .announcement-box-show {
+  display: block;
+}
+.notifications .count-hide {
+  display: none;
+}
+.notifications .notification-line {
+  border-bottom: 1px solid rgba(34, 34, 34, 0.12);
+}
 
 .alerts-box {
-  /* display: none; */
+  display: none;
   height: 582px;
   position: absolute;
   overflow-y: scroll;
   right: 101px;
   top: 41px;
-  box-shadow: 0px 3px 6px #00000029;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
-
-.alert-text {
-  display: -webkit-box;
+.alerts-box .alert-white-ele {
+  background-color: #ffffff;
+}
+.alerts-box .show-all {
+  text-transform: uppercase;
+  letter-spacing: -0.35px;
+  height: 48px;
   font-weight: 600;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  font-size: 14px;
+  color: #1f7a54;
+  position: sticky;
+  bottom: 0;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.24);
+  border-radius: 0px 0px 2px 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .alert-ele {
@@ -173,8 +176,24 @@ body {
   width: 315px;
 }
 
+.alert-text {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: 600;
+}
+.alert-text-and-icon {
+  display: flex;
+  justify-content: space-between;
+}
+
 .alert-info {
   margin-top: 8px;
+}
+.alert-info-course {
+  font-weight: 600;
 }
 
 .alert-time {
@@ -187,44 +206,6 @@ body {
   font-style: normal;
 }
 
-.notifications .notification-line {
-  border-bottom: 1px solid #2222221f;
-}
-
-.minus-icon {
-  height: 18px;
-  height: 15px;
-}
-
-.alert-info-course {
-  font-weight: 600;
-}
-.alert-text-and-icon {
-  display: flex;
-  justify-content: space-between;
-}
-
-.alerts-box .show-all {
-  text-transform: uppercase;
-  letter-spacing: -0.35px;
-  height: 48px;
-  font-weight: 600;
-  font-size: 14px;
-  color: #1f7a54;
-  position: sticky;
-  bottom: 0;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 6px #0000003d;
-  border-radius: 0px 0px 2px 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.notifications .count-hide {
-  display: none;
-}
-
 .alert-count {
   position: absolute;
   top: -5px;
@@ -235,7 +216,12 @@ body {
   width: 16px;
   font-size: 12px;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
+}
+
+.minus-icon {
+  height: 18px;
+  height: 15px;
 }
 
 .attach-icon {
@@ -249,15 +235,10 @@ body {
   overflow-y: scroll;
   right: 47px;
   top: 41px;
-  box-shadow: 0px 3px 6px #00000029;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
-.announcement-title-name {
-  font-weight: 600;
-  color: #222222;
-}
-.announcement-text {
-  font-weight: 600;
-  color: #222222;
+.announcements-box .announcement-white-ele {
+  background-color: #ffffff;
 }
 
 .announcement-ele {
@@ -267,11 +248,18 @@ body {
   width: 315px;
 }
 
+.announcement-title-name {
+  font-weight: 600;
+  color: #222222;
+}
 .announcement-title-and-icon {
   display: flex;
   justify-content: space-between;
 }
+
 .announcement-text {
+  font-weight: 600;
+  color: #222222;
   margin: 8px 0px;
 }
 
@@ -286,41 +274,12 @@ body {
   font-style: normal;
 }
 
-.announcements-box .announcement-white-ele {
-  background-color: #ffffff;
-}
-
 .announcement-course-info {
   margin-top: 8px;
 }
 
 .announcement-time {
   margin-left: auto;
-}
-
-.show-all-and-create-new {
-  text-transform: uppercase;
-  height: 48px;
-  font-size: 14px;
-  font-weight: 600;
-  color: #1f7a54;
-  position: sticky;
-  bottom: 0;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 6px #0000003d;
-  border-radius: 0px 0px 2px 2px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.line-of-announcement {
-  border-left: 1px solid #0000001f;
-  height: 30px;
-}
-
-.notifications .announcement-box-show {
-  display: block;
 }
 
 .announcement-count {
@@ -333,20 +292,41 @@ body {
   width: 16px;
   font-size: 12px;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
+}
+
+.show-all-and-create-new {
+  text-transform: uppercase;
+  height: 48px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #1f7a54;
+  position: sticky;
+  bottom: 0;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.24);
+  border-radius: 0px 0px 2px 2px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.line-of-announcement {
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+  height: 30px;
 }
 
 .profile-role {
   position: absolute;
   top: -5px;
   right: -2px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 50%;
   height: 16px;
   width: 16px;
   font-size: 12px;
   text-align: center;
-  color: #000;
+  color: #000000;
 }
 
 .stats-section {
@@ -379,18 +359,17 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .stat-info {
   display: flex;
   align-items: center;
   gap: 8px;
 }
-
 .stat-info h3 {
   font-size: 24px;
   line-height: 28px;
   font-weight: bold;
 }
-
 .stat-info p {
   font-family: "Quicksand";
   font-size: 16px;
@@ -416,6 +395,7 @@ body {
   height: 4px;
   background-color: #222222;
 }
+
 .courses-header {
   display: flex;
   justify-content: space-between;
@@ -426,7 +406,7 @@ body {
 }
 
 .courses-info {
-  color: #666;
+  color: #666666;
   font-size: 14px;
 }
 
@@ -446,7 +426,6 @@ body {
   background-color: #eeeeee;
   outline: none;
   color: #222222;
-  appearance: none;
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 600;
@@ -454,6 +433,9 @@ body {
   line-height: 20px;
   letter-spacing: 0px;
   opacity: 1;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background-image: url("../assets/icons/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: right -5px center;
@@ -478,7 +460,7 @@ body {
 }
 
 .course-card {
-  background: white;
+  background: #ffffff;
   border-radius: 4px;
   overflow: hidden;
   position: relative;
@@ -509,6 +491,7 @@ body {
 .add-grade {
   color: #1f7a54;
 }
+
 .course-title {
   font-family: "Quicksand";
   font-style: normal;
@@ -516,7 +499,6 @@ body {
   font-size: 16px;
   line-height: 20px;
   color: #222222;
-
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -537,7 +519,6 @@ body {
   line-height: 16px;
   color: #666666;
 }
-
 .sub-grade .sub-line {
   border-left: 1px solid #666666;
   opacity: 0.12;
@@ -554,7 +535,6 @@ body {
   line-height: 16px;
   color: #666666;
 }
-
 .unit-lessons-topic .count {
   font-style: normal;
   font-weight: bold;
@@ -572,8 +552,8 @@ body {
   font-size: 12px;
   line-height: 14px;
   color: #666666;
+  margin: 8px 0px;
 }
-
 .class-info .sub-line {
   border-left: 1px solid #666666;
   opacity: 0.12;
@@ -587,7 +567,6 @@ body {
   border-bottom: 1px solid #e0e0e0;
   outline: none;
   color: #222222;
-  appearance: none;
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 600;
@@ -595,6 +574,9 @@ body {
   line-height: 20px;
   letter-spacing: 0px;
   opacity: 1;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background-image: url("../assets/icons/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: right -5px center;
@@ -604,9 +586,6 @@ body {
   margin-top: 16px;
 }
 
-.class-info {
-  margin: 8px 0px;
-}
 .course-actions {
   display: flex;
   margin-top: auto;
@@ -618,13 +597,13 @@ body {
   height: 36px;
   border: 1px solid #e9ecef;
   border-radius: 8px;
-  background: white;
+  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   transition: all 0.3s ease;
-  color: #666;
+  color: #666666;
 }
 
 .star-icon {
@@ -667,20 +646,18 @@ body {
   margin: 16px;
   justify-content: center;
 }
-
 .info a {
   text-decoration: none;
   color: #1f7a54;
   font-size: 14px;
 }
-
 .info .about {
   margin-right: 10px;
 }
-
 .info .contact {
   margin-left: 10px;
 }
+
 .middel-line {
   border-right: 1px solid #d1d1d1;
 }
@@ -690,7 +667,7 @@ body {
   align-items: center;
   height: 24px;
   padding-left: 10px;
-  border-left: 1px solid #0000001f;
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .zeus {
@@ -705,9 +682,9 @@ body {
 .footer {
   font-size: 12px;
   display: flex;
-  height: 40px;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 40px;
   color: #616161;
   background-color: #e0e1e1;
   margin-top: auto;
@@ -715,105 +692,6 @@ body {
 
 .footer-about {
   margin-top: auto;
-}
-
-@media (max-width: 768px) {
-  .nav-bar {
-    flex-wrap: wrap;
-    border-bottom: 2px solid #3ac7ec;
-  }
-  .notifications {
-    margin-left: auto;
-  }
-
-  .link-and-arrow .arrow {
-    display: block;
-  }
-
-  .nav-links {
-    display: none;
-    width: 280px;
-    gap: 0;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 1rem;
-    background: #ffffff;
-    border-radius: 2px;
-    padding: 0rem 1rem;
-  }
-  .nav-links .nav-item.active {
-    color: #1f7a54;
-  }
-
-  .nav-links .nav-item.active::before {
-    content: "";
-    position: absolute;
-    height: 48px;
-    left: -16px;
-    width: 280px;
-    z-index: -1;
-    background-color: #f3f3f3;
-  }
-
-  .nav-links .nav-item.active::after {
-    display: none;
-  }
-
-  .nav-bar .notifications {
-    margin-left: auto;
-  }
-  .nav-links.show {
-    display: flex;
-    animation: slideDown 0.3s ease-out;
-    position: absolute;
-    top: 40px;
-    right: 16px;
-  }
-
-  .nav-links .nav-item.active .sub-links-show {
-    display: flex;
-    flex-direction: column;
-    margin-left: 16px;
-  }
-
-  .nav-links .nav-item.active .sub-links::before {
-    content: "";
-    position: absolute;
-    height: 48px;
-    left: -16px;
-    width: 280px;
-    z-index: -1;
-    background-color: #f3f3f3;
-  }
-
-  .nav-links .nav-item.active .arrow-roate {
-    transform: rotate(180deg);
-  }
-
-  .nav-links a {
-    height: 48px;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    color: #1f7a54;
-  }
-
-  .link-and-arrow {
-    display: flex;
-    width: 250px;
-  }
-
-  .nav-links a:last-child {
-    border-bottom: none;
-  }
-  .courses-grid {
-    margin: 0px 98px;
-  }
-  .menu-icon {
-    display: block;
-  }
 }
 
 @keyframes slideDown {
@@ -826,3 +704,87 @@ body {
     transform: translateY(0);
   }
 }
+@media (max-width: 768px) {
+  .nav-bar {
+    flex-wrap: wrap;
+    border-bottom: 2px solid #3ac7ec;
+  }
+  .notifications {
+    margin-left: auto;
+  }
+  .link-and-arrow {
+    display: flex;
+    width: 250px;
+  }
+  .link-and-arrow .arrow {
+    display: block;
+  }
+  .nav-links {
+    display: none;
+    width: 280px;
+    gap: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 1rem;
+    background: #ffffff;
+    border-radius: 2px;
+    padding: 0rem 1rem;
+  }
+  .nav-links.show {
+    display: flex;
+    animation: slideDown 0.3s ease-out;
+    position: absolute;
+    top: 40px;
+    right: 16px;
+  }
+  .nav-links .nav-item.active {
+    color: #1f7a54;
+  }
+  .nav-links .nav-item.active::before {
+    content: "";
+    position: absolute;
+    height: 48px;
+    left: -16px;
+    width: 280px;
+    z-index: -1;
+    background-color: #f3f3f3;
+  }
+  .nav-links .nav-item.active::after {
+    display: none;
+  }
+  .nav-links .nav-item.active .sub-links-show {
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+  }
+  .nav-links .nav-item.active .sub-links::before {
+    content: "";
+    position: absolute;
+    height: 48px;
+    left: -16px;
+    width: 280px;
+    z-index: -1;
+    background-color: #f3f3f3;
+  }
+  .nav-links .nav-item.active .arrow-roate {
+    transform: rotate(180deg);
+  }
+  .nav-links a {
+    height: 48px;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    color: #1f7a54;
+  }
+  .nav-links a:last-child {
+    border-bottom: none;
+  }
+  .courses-grid {
+    margin: 0px 98px;
+  }
+  .menu-icon {
+    display: block;
+  }
+}/*# sourceMappingURL=teacher_dashbord.css.map */
