--- a/task_5_Quantum/css/teacher_dashbord.css
+++ b/task_5_Quantum/css/teacher_dashbord.css
@@ -15,6 +15,17 @@ body {
   font-family: "Quicksand", sans-serif;
   height: 100vh;
 }
+body ::-webkit-scrollbar {
+  width: 4px;
+}
+body ::-webkit-scrollbar-thumb {
+  background: #000000;
+  border-radius: 6px;
+}
+body ::-webkit-scrollbar-track {
+  box-shadow: red;
+  border-radius: 6px;
+}
 
 .nav-bar {
   width: 100%;
@@ -137,17 +148,22 @@ body {
   display: none;
 }
 .notifications .notification-line {
-  border-bottom: 1px solid rgba(34, 34, 34, 0.12);
+  border-bottom: 1px solid #e4e4e0;
 }
 
 .alerts-box {
   display: none;
   height: 582px;
+  width: 315px;
   position: absolute;
   overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin;
   right: 101px;
   top: 41px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  animation: slideDown 0.4s ease-out;
+  border-radius: 2px;
 }
 .alerts-box .alert-white-ele {
   background-color: #ffffff;
@@ -183,6 +199,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   font-weight: 600;
+  width: 254px;
 }
 .alert-text-and-icon {
   display: flex;
@@ -231,11 +248,16 @@ body {
 .announcements-box {
   display: none;
   height: 582px;
+  width: 315px;
   position: absolute;
   overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin;
   right: 47px;
   top: 41px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  animation: slideDown 0.4s ease-out;
+  border-radius: 2px;
 }
 .announcements-box .announcement-white-ele {
   background-color: #ffffff;
@@ -258,6 +280,7 @@ body {
 }
 
 .announcement-text {
+  width: 254px;
   font-weight: 600;
   color: #222222;
   margin: 8px 0px;
@@ -466,6 +489,14 @@ body {
   position: relative;
 }
 
+.star-gray-icon {
+  position: absolute;
+  top: 1.5rem;
+  right: 1rem;
+  font-size: 20px;
+  filter: grayscale(1);
+}
+
 .course-image {
   width: 132px;
   height: 157px;
@@ -493,6 +524,7 @@ body {
 }
 
 .course-title {
+  width: 248px;
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
@@ -580,6 +612,9 @@ body {
   background-image: url("../assets/icons/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: right -5px center;
+}
+.class-selection .no-class-option {
+  color: #a7a7a7;
 }
 
 .course-class {
@@ -783,6 +818,9 @@ body {
   }
   .courses-grid {
     margin: 0px 98px;
+  }
+  .courses-grid .course-title {
+    width: auto;
   }
   .menu-icon {
     display: block;
