--- a/task_5_Quantum/css/teacher_dashbord.scss
+++ b/task_5_Quantum/css/teacher_dashbord.scss
@@ -566,6 +566,7 @@ body {
     right: 1rem;
     font-size: 20px;
     filter: grayscale(1);
+    opacity: 0.4;
 }
 
 .course-image {
@@ -748,6 +749,7 @@ body {
 
     a {
         text-decoration: none;
+        font-weight: 600;
         color: $dark-green;
         font-size: 14px;
     }
