--- a/task_7/styles.scss
+++ b/task_7/styles.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .my-background{
-    background-color: black;
+    background-color: #9E9E9E;
     height: 100vh;
     margin: 0px;
     position: relative;
