--- a/task_7/styles.css
+++ b/task_7/styles.css
@@ -3,6 +3,11 @@ body {
   padding: 0px;
 }
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .my-background {
   background-color: #9E9E9E;
   height: 100vh;
@@ -11,6 +16,7 @@ body {
   overflow: hidden;
 }
 .my-background .bg-child {
+  border-radius: 50%;
   touch-action: none;
   position: absolute;
   width: 50px;
