--- a/task_8/css/styles.css
+++ b/task_8/css/styles.css
@@ -19,12 +19,24 @@ body {
 }
 
 .grid-container {
-  width: 100vw;
-  height: calc(100vh - 40px);
+  position: relative;
   overflow: auto;
+  height: 100vh;
+  width: 100vw;
+}
+
+.virtual-class {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  cursor: cell;
+  z-index: 5;
 }
 
 #excel-grid {
   background-color: white;
-  display: block;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  pointer-events: none;
 }/*# sourceMappingURL=styles.css.map */
