--- a/task_8/css/styles.scss
+++ b/task_8/css/styles.scss
@@ -1,51 +1,42 @@
 body {
-
-    margin: 0;
-
-    padding: 0;
-
-    font-family: Arial, sans-serif;
-
-    overflow: hidden;
-
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  overflow: hidden;
 }
 
 .toolbar {
-
-    padding: 10px;
-
-    background-color: #f0f0f0;
-
-    border-bottom: 1px solid #ccc;
-
-    display: flex;
-
-    gap: 10px;
-
+  padding: 10px;
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  gap: 10px;
 }
 
 .toolbar button {
-
-    padding: 5px 10px;
-
-    cursor: pointer;
-
+  padding: 5px 10px;
+  cursor: pointer;
 }
 
 .grid-container {
+  position: relative;
+  overflow: auto;
+  height: 100vh;
+  width: 100vw;
+}
 
-    width: 100vw;
-
-    height: calc(100vh - 40px);
-
-    overflow: auto;
-
+.virtual-class{
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  cursor: cell;
+  z-index: 5;
 }
 
 #excel-grid {
-
-    background-color: white;
-
-    display: block;
-
+  background-color: white;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  pointer-events: none;
 }
