--- a/task_8/css/styles.scss
+++ b/task_8/css/styles.scss
@@ -21,7 +21,8 @@ body {
 .grid-container {
   position: relative;
   overflow: auto;
-  height: 100vh;
+   height: calc(100vh - 40px);
+  // height: 100vh;
   width: 100vw;
 }
 
