--- a/task_8/css/styles.scss
+++ b/task_8/css/styles.scss
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   overflow: hidden;
+  // height: 100vh;
+  // width: 100vw;
 }
 
 .toolbar {
@@ -21,13 +23,13 @@ body {
 .grid-container {
   position: relative;
   overflow: auto;
-  height: 100vh;
+  height: 98vh;
   width: 100vw;
 }
 
 .virtual-class{
-  height: 100vh;
-  width: 100vw;
+  height: 3000px;
+  width: 3000px;
   position: relative;
   cursor: cell;
   z-index: 5;
