--- a/task_8/css/styles.css
+++ b/task_8/css/styles.css
@@ -5,6 +5,13 @@ body {
   overflow: hidden;
 }
 
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
 .toolbar {
   padding: 10px;
   background-color: #f0f0f0;
@@ -21,7 +28,7 @@ body {
 .grid-container {
   position: relative;
   overflow: auto;
-  height: 96vh;
+  flex: 1;
   width: 100vw;
 }
 
@@ -38,4 +45,9 @@ body {
   left: 0px;
   position: sticky;
   pointer-events: none;
+}
+
+.stats-bar {
+  height: 20px;
+  background-color: #ffffff;
 }/*# sourceMappingURL=styles.css.map */
